# sideraxis

./: readme.md
core/: .gitignore  Cargo.toml  main.py  pyproject.toml  stepCounter.sh
core/.serena/: project.yml
core/.serena/memories/: project_info.md  task_completion_checklist.md
core/docs/: project_design.md  rust_migration_guide.md
core/engine/: Cargo.toml
core/engine/src/: actuator.rs  main.rs  place.rs  stoprail.rs  virtual_servo.rs
core/src/core/: PRDMS4.py  flag_manager.py  place.py  stop_rail.py  train.py  two_way_point.py
core/src/exceptions/: __init__.py  base.py  core.py  hardware.py
core/src/hal/: component.py  gateway.py  worker.py
core/src/infrastructure/: task_delegator.py  v_clock.py
core/src/web/: api.py  core.py  hal.py  infrastructure.py  v_clock.py
core/tests/: conftest.py  test_place.py  test_stop_rail.py  test_two_way_point.py
core_rust/: Cargo.toml
core_rust/src/: core.rs  main.rs  vclock.rs
core_rust/src/core/: actuator.rs  vclock.rs
